fix: some links are updated

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <a href="" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item h-class px-2">
-                        <a href="" class="nav-link">SignUp for Admins</a>
+                        <a href="signup.html" class="nav-link">SignUp for Admins</a>
                     </li>
                     <li class="nav-item h-class px-2">
-                        <a href="" class="nav-link">Login Admins</a>
+                        <a href="login.html" class="nav-link">Login Admins</a>
                     </li>
                 </ul>
             </div>
