--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse " id="NavbarScroll">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll ">
                     <li class="nav-item h-class px-2"> 
-                        <a href="#" class="nav-link active" aria-current="page">Home</a>
+                        <a href="index.html" class="nav-link active" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item h-class px-2">
                         <a href="" class="nav-link">About</a>
