--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .h-class .nav-link{
-            color:white;
-            transition: all 0.2s ease;
-        }
-        .h-class .nav-link:hover{
-             background-color:white;
-            color: black !important;
-            border-radius: 45%;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script src="bootstrap-5.3.7-dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.min.css">
 </head>
@@ -31,13 +20,13 @@
             <div class="collapse navbar-collapse " id="NavbarScroll">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll ">
                     <li class="nav-item h-class px-2"> 
-                        <a href="#" class="nav-link active" aria-current="page">Home</a>
+                        <a href="index.html" class="nav-link active" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item h-class px-2">
                         <a href="" class="nav-link">About</a>
                     </li>
                     <li class="nav-item h-class px-2">
-                        <a href="" class="nav-link">Live Monitoring</a>
+                        <a href="monitoring.html" class="nav-link">Live Monitoring</a>
                     </li>
                     <li class="nav-item h-class px-2">
                         <a href="" class="nav-link">Report Incident</a>
