--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.min.css">
     <script src="bootstrap-5.3.7-dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                         <a href="" class="nav-link">About</a>
                     </li>
                     <li class="nav-item h-class px-2">
-                        <a href="" class="nav-link">Live Monitoring</a>
+                        <a href="monitoring.html" class="nav-link">Live Monitoring</a>
                     </li>
                     <li class="nav-item h-class px-2">
                         <a href="" class="nav-link">Report Incident</a>
