--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.min.css">
     <script src="bootstrap-5.3.7-dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -26,7 +27,7 @@
                         <a href="" class="nav-link">About</a>
                     </li>
                     <li class="nav-item h-class px-2">
-                        <a href="" class="nav-link">Live Monitoring</a>
+                        <a href="monitoring.html" class="nav-link">Live Monitoring</a>
                     </li>
                     <li class="nav-item h-class px-2">
                         <a href="" class="nav-link">Report Incident</a>
